--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -6,8 +6,10 @@ body{
 }
 header{
     width: 100%;
-    height: 180px;
-    position: fixed;
+    height: 250px;
+    background-image: url("../img/cabecera.png");
+    background-attachment: fixed;
+    border-bottom: rgba(109, 66, 41, 0.658) 15px outset;
 }
 header > a > img{
     width: 200px;
@@ -16,6 +18,12 @@ header > a > img{
     clear: left;
     padding-left: 15px;
 }
+
+#icono {
+    margin-top: 15px;
+    float: right;
+}
+
 #icono:hover{
     transition: 0.6s;
     width: 225px;
@@ -42,16 +50,19 @@ header nav{
     clear: right;
     padding-right: 15px;
 }
+
 header > nav > ul{
     list-style-type: none;
     background-color: #231107;
 }
+
 header > nav > ul > li{
     float: left;
     padding: 10px;
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     background-color: #231107;
 }
+
 header > nav > ul > li > a{
     display: block;
     text-decoration: none;
@@ -60,24 +71,40 @@ header > nav > ul > li > a{
     padding: 10px;
     text-align: center;
 }
+
+nav {
+    margin-top: 15px;
+    position: fixed;
+}
+
 .enlaces:hover{
     background-color: #61290b;
     transition: 0.8s;
     font-size: 1.15em;
     border-bottom: white 3px ridge;
 }
+
+.banderas {
+    margin-top: -5px;
+    width: 22px;
+    height: 22px;
+}
+
 .banderas:hover{
     width: 28px;
     height: 28px;
     transition: 0.8s;
 }
+
 nav ul ul{
     display: none;
 }
+
 nav ul ul li{
     float: none;
     list-style: none;
 }
+
 nav ul ul a{
     display: block;
     padding: 8px 30px 8px 8px;
@@ -89,15 +116,18 @@ nav ul ul a{
     margin-right: 30px;
     margin-top: 10px;
 }
+
 nav ul ul a:hover{
     transition: 0.8s;
     font-size: 0.8em;
     background-color: #61290b;
     border-bottom: white 2px ridge;
 }
+
 nav ul li:hover > ul{
     display: block;
 }
+
 main{
     margin-top: 180px;
     padding: 100px;
@@ -108,7 +138,9 @@ main{
     width: 1250px;
     height: 250px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-top: -150px;
+    margin-bottom: 40px;
+    opacity: 0.5;
 }
 
 #carta_index {
@@ -116,7 +148,8 @@ main{
     width: 1250px;
     height: 250px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    opacity: 0.5;
 }
 
 #eventos {
@@ -124,7 +157,8 @@ main{
     width: 1250px;
     height: 250px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    opacity: 0.5;
 }
 
 #pedidos_reservas {
@@ -132,7 +166,8 @@ main{
     width: 1250px;
     height: 250px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    opacity: 0.5;
 }
 
 footer {
